fix: correção da formatação da tabela e menção do artefato mapa mental no texto

--- a/docs/Base/1.1.2.5W2H.md
+++ b/docs/Base/1.1.2.5W2H.md
@@ -6,11 +6,15 @@ O método 5W2H é uma abordagem essencial no campo da gestão, projetada para as
 
 ## Objetivo
 
-O objetivo principal é analisar e resolver o problema existente no aplicativo da Magalu relacionado à dificuldade de encontrar informações sobre os produtos. Isso envolve melhorar a experiência do usuário, tornando mais fácil e eficaz a busca e o acesso às informações necessárias sobre os produtos oferecidos pela empresa. A análise e resolução desse problema são essenciais para aumentar a satisfação do cliente, otimizar o processo de compra e, consequentemente, impulsionar o sucesso do aplicativo e do negócio como um todo.
+O objetivo principal deste projeto é analisar e resolver o problema existente no aplicativo da Magalu relacionado à dificuldade de encontrar informações sobre os produtos. Esse problema foi identificado com base no [mapa mental](./1.3.MapaMental.md), seguindo as diretrizes da visão sprint. Isso envolve aprimorar a experiência do usuário, tornando mais fácil e eficiente a busca e o acesso às informações necessárias sobre os produtos oferecidos pela empresa. A análise e resolução desse problema são essenciais para aumentar a satisfação do cliente, otimizar o processo de compra e, consequentemente, impulsionar o sucesso do aplicativo e do negócio como um todo.
 
 ## Artefato
 
 A Tabela 1 apresenta o plano 5W2H, uma ferramenta essencial no planejamento de projetos, que visa estabelecer de forma clara e completa os aspectos fundamentais de uma ação ou iniciativa. Nesse contexto, a tabela aborda o problema em análise, que se refere à dificuldade dos clientes em encontrar informações relevantes sobre os produtos no aplicativo da Magalu.
+
+<center>
+
+**Tabela 1** - Participantes da Criação do Plano.
 
 |          Pergunta          |                                                                                       Descrição                                                                                       |
 | :------------------------: | :---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------: |
@@ -21,7 +25,10 @@ A Tabela 1 apresenta o plano 5W2H, uma ferramenta essencial no planejamento de p
 | **When (Quando será feito?)** |  A solução se desenvolverá no 2° semestre de 2023. |
 | **How (Como será feito?)** | Será adotado o conceito de Sprints, uma abordagem inspirada na metodologia ágil Scrum. Durante ciclos de três semanas, a equipe determinará as tarefas a serem realizadas, assim como os responsáveis pela criação de cada artefato e pela aplicação das metodologias necessárias. |
 | **How Much (Quanto custará?)** |  Por ser um projeto de cunho educacional, será utilizado para a parte prática da matéria e não terá um custo real. |
-<p align="center">Tabela 1: 5W2H do problema em análise</p>
+
+_Fonte: Elaborada por [Debora Caires](https://github.com/deboracaires), [Laura Pinos](https://github.com/laurapinos) e [Hellen Fernanda](https://github.com/Hellen159), 2023._
+
+</center>
 
 ## Conclusão
 
@@ -36,3 +43,4 @@ Em resumo, a aplicação do método 5W2H neste projeto, focado na análise das d
 | :----: | :-----------------------------: | :----------------------------------------------------------------------------------------------------------------------------------------------: | :-----: | :--------: |
 |  1.0   | Implementação e criação do 5W2H | [Debora Caires](https://github.com/deboracaires), [Laura Pinos](https://github.com/laurapinos) e [Hellen Fernanda](https://github.com/Hellen159) |         | 11/09/2023 |
 |  1.1   | Revisão para adaptação ao problema a ser analisado | [Debora Caires](https://github.com/deboracaires), [Laura Pinos](https://github.com/laurapinos) e [Hellen Fernanda](https://github.com/Hellen159) |         | 15/09/2023 |
+|  1.2   | Correção tabela e menção do mapa mental | [Debora Caires](https://github.com/deboracaires) |         | 15/09/2023 |
