--- a/docs/Base/1.3.ParticipacoesBase.md
+++ b/docs/Base/1.3.ParticipacoesBase.md
@@ -9,7 +9,7 @@ Breve relato sobre as participações/contribuições de cada membro à entrega.
 | [Laura Pinos](https://github.com/laurapinos)              |  [5W2H](1.1.2.5W2H.md) | Boa | 
 | [Hellen Fernanda](https://github.com/Hellen159)              |  [5W2H](1.1.2.5W2H.md) <br> [Rich Picture]()|  |
 | [Débora Caires](https://github.com/deboracaires)              |  [5W2H](1.1.2.5W2H.md) <br> [Rich Picture]() [Escolhas Metodológicas]()| |
-| [Arthur de Melo](https://github.com/arthurmlv)              | [Diagrama Causa-Efeito](1.1.3.causa-efeito.md) <br> [Léxicos](lexicos.md)| |
+| [Arthur de Melo](https://github.com/arthurmlv)              | [Diagrama Causa-Efeito](1.1.3.causa-efeito.md) <br> [Léxicos](lexicos.md) <br> [Teste](testes.md)| Excelente |
 | [Douglas Alves](https://github.com/dougAlvs)              | [Diagrama Causa-Efeito](1.1.3.causa-efeito.md) <br> [Design Sprint]() | |
 | [Matheus Henrique](https://github.com/mathonaut)              | [Plano de Risco e Tempo](1.1.6.plano-risco-tempo.md) <br> [Mapa Mental]() | |
 | [Sidney Fernando](https://github.com/nando3d3)              | [Plano de Risco e Tempo](1.1.6.plano-risco-tempo.md) <br> [Léxicos](lexicos.md)| Excelente |
@@ -21,7 +21,7 @@ Breve relato sobre as participações/contribuições de cada membro à entrega.
 | Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) |
 | -------------  | ------------ | ------------------------------------------------------------------------------ |
 | [Laura Pinos](https://github.com/laurapinos)          | [Modelagem BPMN]() <br> [Escolhas Metodológicas]()     | Regular|
-| [Arthur de Melo](https://github.com/arthurmlv)        | [Modelagem BPMN]()      | |
+| [Arthur de Melo](https://github.com/arthurmlv)        | [Modelagem BPMN](1.2.ProcessosMetodologiasAbordagens.md)      | Regular |
 | [Douglas Alves](https://github.com/dougAlvs)          | [Modelagem BPMN]()      | |
 | [Sidney Fernando](https://github.com/nando3d3)        | [Modelagem BPMN]()      | Boa |
 
