Add: adiciona os protótipos das telas inicial, busca e visualização de produto

--- a/docs/Base/1.5.Prototipos.md
+++ b/docs/Base/1.5.Prototipos.md
@@ -11,9 +11,39 @@ Segundo Sommerville (2016)[¹](#ancora1), a prototipação envolve a criação d
 
 ## Protótipo 1
 
+<center>
+
+Figura 1 - Protótipo da tela inicial
+
+<img src="assets/prototipo3.jpg" alt="Prototipo tela inicial" width="1000"/>
+
+<font>Fonte: [Débora Caires](https://github.com/deboracaires) e [Maciel Júnior](https://github.com/macieljuniormax), 2023</font>
+
+</center>
+
 ## Protótipo 2
 
+<center>
+
+Figura 2 - Protótipo da tela de busca de produtos
+
+<img src="assets/prototipo2.jpg" alt="Prototipo tela busca" width="1000"/>
+
+<font>Fonte: [Débora Caires](https://github.com/deboracaires) e [Maciel Júnior](https://github.com/macieljuniormax), 2023</font>
+
+</center>
+
 ## Protótipo 3
+
+<center>
+
+Figura 3 - Protótipo da tela de visualização do produto
+
+<img src="assets/prototipo1.jpg" alt="Prototipo tela busca" width="1000"/>
+
+<font>Fonte: [Débora Caires](https://github.com/deboracaires) e [Maciel Júnior](https://github.com/macieljuniormax), 2023</font>
+
+</center>
 
 ## Referências Biblgráficas
 
@@ -25,3 +55,4 @@ Segundo Sommerville (2016)[¹](#ancora1), a prototipação envolve a criação d
 | Versão | Descrição         | Responsável                      | Revisor | Data       |
 | ------ | ----------------- | -------------------------------- | ------- | ---------- |
 | 1.0    | Criação da página | [Maciel Júnior](macieljuniormax) |         | 15/09/2023 |
+| 1.1    | Adição dos protótipos iniciais | [Débora Caires](deboracaires) |         | 15/09/2023 |
