docs: adiciona prototipo navegavel do figma

--- a/docs/Base/1.5.Prototipos.md
+++ b/docs/Base/1.5.Prototipos.md
@@ -2,7 +2,7 @@
 
 ## Introdução
 
-Segundo Sommerville (2016)[¹](#ancora1), a prototipação envolve a criação de um modelo do sistema que é disponibilizado aos clientes e usuários para que eles possam interagir com o sistema e determinar se ele atende às suas necessidades. Com esse objetivo foram desenvolvido alguns protótipos com o auxilio da ferramenda Figma[²](#ancora2). O propósitos desses protótipos é mitigar o problema identificado no [Mapa Mental](), que é a dificuldade do usuário de encontrar o produto desejado.
+Segundo Sommerville (2016)[¹](#ancora1), a prototipação envolve a criação de um modelo do sistema que é disponibilizado aos clientes e usuários para que eles possam interagir com o sistema e determinar se ele atende às suas necessidades. Com esse objetivo foram desenvolvido alguns protótipos com o auxilio da ferramenda Figma[²](#ancora2). Esse protótipo implementa o fluxo do [storyboard]() e corresponde a 4ª etapa da [design sprint]().
 
 ## Participantes
 
@@ -45,6 +45,12 @@ Figura 3 - Protótipo da tela de visualização do produto
 
 </center>
 
+## Protótipo Navegável no Figma
+
+<center>
+<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1000" height="550" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fon0JReLBUejrDCnsmoXWQW%2FUntitled%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D11-12653%26viewport%3D165%252C558%252C0.21%26t%3DMVuFDvW0Oyfg0Kl3-1%26scaling%3Dmin-zoom%26starting-point-node-id%3D11%253A12653%26mode%3Ddesign" allowfullscreen></iframe>
+</center>
+
 ## Referências Biblgráficas
 
 > <a id="ancora1"></a> 1. SOMMERVILLE, I. Software engineering. 10.ed. Harlow: Pearson Education, 2016 p.77  
@@ -54,5 +60,6 @@ Figura 3 - Protótipo da tela de visualização do produto
 
 | Versão | Descrição         | Responsável                      | Revisor | Data       |
 | ------ | ----------------- | -------------------------------- | ------- | ---------- |
-| 1.0    | Criação da página | [Maciel Júnior](macieljuniormax) |         | 15/09/2023 |
-| 1.1    | Adição dos protótipos iniciais | [Débora Caires](deboracaires) |         | 15/09/2023 |
+| 1.0    | Criação da página | [Maciel Júnior](https://github.com/macieljuniormax) |         | 15/09/2023 |
+| 1.1    | Adição dos protótipos iniciais | [Débora Caires](https://github.com/deboracaires) |         | 15/09/2023 |
+| 1.2    | Adição do protótipo navegável do figma | [Douglas Alves](https://github.com/dougAlvs) |         | 15/09/2023 |
