fix: corrige link pagina 5w2h

--- a/docs/Base/1.1.2.5W2H.md
+++ b/docs/Base/1.1.2.5W2H.md
@@ -6,7 +6,7 @@ O método 5W2H é uma abordagem essencial no campo da gestão, projetada para as
 
 ## Objetivo
 
-O objetivo principal deste projeto é analisar e resolver o problema existente no aplicativo da Magalu relacionado à dificuldade de encontrar informações sobre os produtos. Esse problema foi identificado com base no [mapa mental](./1.3.MapaMental.md), seguindo as diretrizes da visão sprint. Isso envolve aprimorar a experiência do usuário, tornando mais fácil e eficiente a busca e o acesso às informações necessárias sobre os produtos oferecidos pela empresa. A análise e resolução desse problema são essenciais para aumentar a satisfação do cliente, otimizar o processo de compra e, consequentemente, impulsionar o sucesso do aplicativo e do negócio como um todo.
+O objetivo principal deste projeto é analisar e resolver o problema existente no aplicativo da Magalu relacionado à dificuldade de encontrar informações sobre os produtos. Esse problema foi identificado com base no [mapa mental](./MapaMental.md). Isso envolve aprimorar a experiência do usuário, tornando mais fácil e eficiente a busca e o acesso às informações necessárias sobre os produtos oferecidos pela empresa. A análise e resolução desse problema são essenciais para aumentar a satisfação do cliente, otimizar o processo de compra e, consequentemente, impulsionar o sucesso do aplicativo e do negócio como um todo.
 
 ## Artefato
 
@@ -34,7 +34,7 @@ _Fonte: Elaborada por [Debora Caires](https://github.com/deboracaires), [Laura P
 
 Em resumo, a aplicação do método 5W2H neste projeto, focado na análise das dificuldades dos clientes em encontrar informações relevantes sobre produtos no aplicativo da Magalu, proporciona uma estrutura sólida e clara. Isso permite que a equipe de estudantes de Engenharia de Software da Universidade de Brasília execute o projeto de forma eficiente, com uma compreensão precisa dos objetivos, recursos e processo de execução. Ao identificar e abordar as questões que afetam a experiência do usuário, o projeto visa melhorar a satisfação dos clientes, aumentar as conversões de vendas e fortalecer a fidelidade do cliente, contribuindo assim para o sucesso e aprimoramento contínuo do aplicativo da Magalu.
 
-## Referências
+## Referências Bibliográficas
 > <a id="ancora1"></a> 1. SEBRAE-SC. "5W2H: O que é, para que serve e por que usar na sua empresa". SEBRAE Santa Catarina, <https://www.sebrae-sc.com.br/blog/5w2h-o-que-e-para-que-serve-e-por-que-usar-na-sua-empresa>. Acesso em: 15 set. 2023.  
 
 ## Histórico de versões
