--- a/docs/Base/1.3.ParticipacoesBase.md
+++ b/docs/Base/1.3.ParticipacoesBase.md
@@ -4,17 +4,17 @@ Breve relato sobre as participações/contribuições de cada membro à entrega.
 
 # Módulo Projeto Não Orientado a Abordagens Específicas
 
-| Nome do Membro                                      | Contribuição                                                                                                                                                                                                                           | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) |
-| --------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------ |
-| [Laura Pinos](https://github.com/laurapinos)        | [5W2H](1.1.2.5W2H.md)                                                                                                                                                                                                                  | Boa                                                                            |
-| [Hellen Fernanda](https://github.com/Hellen159)     | [5W2H](1.1.2.5W2H.md) <br> [Rich Picture](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.4.RichPicture)                                                                                                     |                                                                                |
-| [Débora Caires](https://github.com/deboracaires)    | [5W2H](1.1.2.5W2H.md) <br> [Escolhas Metodológicas]() <br> [Protótipos]()                                                                         |                            Excelente                                                    |
-| [Arthur de Melo](https://github.com/arthurmlv)      | [Diagrama Causa-Efeito](1.1.3.causa-efeito.md) <br> [Léxicos](lexicos.md)                                                                                                                                                              |                                                                                |
-| [Douglas Alves](https://github.com/dougAlvs)        | [Diagrama Causa-Efeito](1.1.3.causa-efeito.md) <br> [Design Sprint]()                                                                                                                                                                  |                                                                                |
-| [Matheus Henrique](https://github.com/mathonaut)    | [Plano de Risco e Tempo](1.1.6.plano-risco-tempo.md) <br> [Mapa Mental](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.3.MapaMental)                                                                        | Excelente                                                                      |
-| [Sidney Fernando](https://github.com/nando3d3)      | [Plano de Risco e Tempo](1.1.6.plano-risco-tempo.md) <br> [Léxicos](lexicos.md)                                                                                                                                                        | Excelente                                                                      |
-| [Maciel Junior](https://github.com/macieljuniormax) | [Rich Picture]() <br> [Mapa Mental](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.3.MapaMental)                                                                                                            |                                                                                |
-| [Geovanna Maciel](https://github.com/manuziny)      | [Rich Picture](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.4.RichPicture) <br> [Mapa Mental](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.3.MapaMental) <br> [Storyboard]() | Excelente                                                                      |
+| Nome do Membro                                      | Contribuição                                                                                                                                                                                                                                    | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) |
+| --------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------ |
+| [Laura Pinos](https://github.com/laurapinos)        | [5W2H](1.1.2.5W2H.md)                                                                                                                                                                                                                           | Boa                                                                            |
+| [Hellen Fernanda](https://github.com/Hellen159)     | [5W2H](1.1.2.5W2H.md) <br> [Rich Picture](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.4.RichPicture)                                                                                                              |                                                                                |
+| [Débora Caires](https://github.com/deboracaires)    | [5W2H](1.1.2.5W2H.md) <br> [Escolhas Metodológicas]() <br> [Protótipos]()                                                                                                                                                                       | Excelente                                                                      |
+| [Arthur de Melo](https://github.com/arthurmlv)      | [Diagrama Causa-Efeito](1.1.3.causa-efeito.md) <br> [Léxicos](lexicos.md)                                                                                                                                                                       |                                                                                |
+| [Douglas Alves](https://github.com/dougAlvs)        | [Diagrama Causa-Efeito](1.1.3.causa-efeito.md) <br> [Design Sprint]()                                                                                                                                                                           |                                                                                |
+| [Matheus Henrique](https://github.com/mathonaut)    | [Plano de Risco e Tempo](1.1.6.plano-risco-tempo.md) <br> [Mapa Mental](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.3.MapaMental)                                                                                 | Excelente                                                                      |
+| [Sidney Fernando](https://github.com/nando3d3)      | [Plano de Risco e Tempo](1.1.6.plano-risco-tempo.md) <br> [Léxicos](lexicos.md)                                                                                                                                                                 | Excelente                                                                      |
+| [Maciel Junior](https://github.com/macieljuniormax) | [Protótipos](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.5.Prototipos) <br> [Escolhas Metodológicas](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.2.ProcessosMetodologiasAbordagens) | Excelente                                                                      |
+| [Geovanna Maciel](https://github.com/manuziny)      | [Rich Picture](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.4.RichPicture) <br> [Mapa Mental](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.3.MapaMental) <br> [Storyboard]()          | Excelente                                                                      |
 
 # Processos, Metodologias e Abordagens
 
