--- a/docs/Base/1.3.ParticipacoesBase.md
+++ b/docs/Base/1.3.ParticipacoesBase.md
@@ -1,31 +1,40 @@
 # 1.3. Participações - Base
 
-Breve relato sobre as participações/contribuições de cada membro à entrega.
+## Introdução
 
-# Módulo Projeto Não Orientado a Abordagens Específicas
+Esse documento apresenta as auto-avaliações que cada integrante do grupo fez acerca de sua própria participação na entrega.
+
+## Participações
+
+### Módulo Projeto Não Orientado a Abordagens Específicas
 
 | Nome do Membro                                      | Contribuição                                                                                                                                                                                                                                    | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) |
 | --------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------ |
 | [Laura Pinos](https://github.com/laurapinos)        | [5W2H](1.1.2.5W2H.md)                                                                                                                                                                                                                           | Boa                                                                            |
 | [Hellen Fernanda](https://github.com/Hellen159)     | [5W2H](1.1.2.5W2H.md) <br> [Rich Picture](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.4.RichPicture)                                                                                                              |                                                                                |
-| [Débora Caires](https://github.com/deboracaires)    | [5W2H](1.1.2.5W2H.md) <br> [Escolhas Metodológicas]() <br> [Protótipos]()                                                                                                                                                                       | Excelente                                                                      |
+| [Débora Caires](https://github.com/deboracaires)    | [5W2H](1.1.2.5W2H.md) <br> [Protótipos]()                                                                                                                                                                       | Excelente                                                                      |
 | [Arthur de Melo](https://github.com/arthurmlv)      | [Diagrama Causa-Efeito](1.1.3.causa-efeito.md) <br> [Léxicos](lexicos.md) <br> [Teste de Usabilidade](testes.md)                 |     Excelente                                                                           |
-| [Douglas Alves](https://github.com/dougAlvs)        | [Diagrama Causa-Efeito](1.1.3.causa-efeito.md) <br> [Design Sprint]()                                                                                                                                                                           |                                                                                |
+| [Douglas Alves](https://github.com/dougAlvs)        | [Diagrama Causa-Efeito](1.1.3.causa-efeito.md) <br> [Design Sprint]()      |      Excelente                                                                          |
 | [Matheus Henrique](https://github.com/mathonaut)    | [Plano de Risco e Tempo](1.1.6.plano-risco-tempo.md) <br> [Mapa Mental](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.3.MapaMental)                                                                                 | Excelente                                                                      |
 | [Sidney Fernando](https://github.com/nando3d3)      | [Plano de Risco e Tempo](1.1.6.plano-risco-tempo.md) <br> [Léxicos](lexicos.md)                                                                                                                                                                 | Excelente                                                                      |
 | [Maciel Junior](https://github.com/macieljuniormax) | [Protótipos](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.5.Prototipos) <br> [Escolhas Metodológicas](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.2.ProcessosMetodologiasAbordagens) | Excelente                                                                      |
 | [Geovanna Maciel](https://github.com/manuziny)      | [Rich Picture](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.4.RichPicture) <br> [Mapa Mental](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.3.MapaMental) <br> [Storyboard]()          | Excelente                                                                      |
 
-# Processos, Metodologias e Abordagens
+### Processos, Metodologias e Abordagens
 
 | Nome do Membro                                 | Contribuição                                             | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) |
 | ---------------------------------------------- | -------------------------------------------------------- | ------------------------------------------------------------------------------ |
 | [Laura Pinos](https://github.com/laurapinos)   | [Modelagem BPMN]() <br> [Escolhas Metodológicas]()       | Regular                                                                        |
 | [Arthur de Melo](https://github.com/arthurmlv) | [Modelagem BPMN](1.2.ProcessosMetodologiasAbordagens.md) | Regular                                                                        |
-| [Douglas Alves](https://github.com/dougAlvs)   | [Modelagem BPMN]()                                       |                                                                                |
+| [Douglas Alves](https://github.com/dougAlvs)   | [Modelagem BPMN]()                                       |    Excelente                                                                           | 
 | [Sidney Fernando](https://github.com/nando3d3) | [Modelagem BPMN]()                                       | Boa                                                                            |
+| [Débora Caires](https://github.com/deboracaires)    | [Escolhas Metodológicas]()  | Excelente                                                                      |
+
+
+## Histórico de Versões
 
 | Versão | Data       | Descrição                   | Autor(es)                                        | Revisor(es)                                  |
 | ------ | ---------- | --------------------------- | ------------------------------------------------ | -------------------------------------------- |
 | `1.0`  | 15/09/2023 | Criação da página           | [Sidney Fernando](https://github.com/nando3d3)   | [Douglas Alves](https://github.com/dougalvs) |
 | `1.1`  | 15/09/2023 | Adição da avaliação pessoal | [Matheus Henrique](https://github.com/mathonaut) | [Douglas Alves](https://github.com/dougalvs) |
+| `1.1.1`  | 15/09/2023 | Adição da avaliação pessoal | [Douglas Alves](https://github.com/dougalvs) | [Arthur de Melo](https://github.com/arthurmlv) |
