fix: arruma organizacao das paginas e links quebrados

--- a/docs/Base/1.1.AbordagemNaoEspecifica.md
+++ b/docs/Base/1.1.AbordagemNaoEspecifica.md
@@ -2,7 +2,7 @@
 
 ## Introdução
 
-Nessa primeira etapa do trabalho, o grupo realizou a elaboração de alguns artefatos com o objetivo de definir metodologias de trabalho, entender melhor o escopo do projeto, o fluxo de trabalho abordado e identificar possíveis pontos de melhoria no sistema. Para isso, foram utilizadas as metodologias SCRUM e XP, melhores detalhadas no seguinte [artefato](), que apresenta uma descrição dos processos utilizados e sua modelagem BPMN, além de uma adaptação da design sprint, que será melhor explicada no presente documento.
+Nessa primeira etapa do trabalho, o grupo realizou a elaboração de alguns artefatos com o objetivo de definir metodologias de trabalho, entender melhor o escopo do projeto, o fluxo de trabalho abordado e identificar possíveis pontos de melhoria no sistema. Para isso, foram utilizadas as metodologias SCRUM e XP, melhores detalhadas no seguinte [artefato](Base/1.2.ProcessosMetodologiasAbordagens.md), que apresenta uma descrição dos processos utilizados e sua modelagem BPMN, além de uma adaptação da design sprint, que será melhor explicada no presente documento.
 
 ## Design Sprint
 
@@ -16,53 +16,53 @@ A design sprint é um processo de 5 dias proposto pela Google Venture como uma m
 
 ## Metodologia
 
-No contexto do projeto, uma adaptação da design sprint foi utilizada para guiar a construção de alguns artefatos e a subsequente solução de um dado problema. As etapas não seguiram o modelo de dias consecutivos de forma exata, mas sim etapas em que artefatos eram elaborados em conjunto com um determinado objetivo em mente. A divisão de cada passo foi a seguinte e esse mesmo fluxo também está representado na [Modelagem BPMN]():
+No contexto do projeto, uma adaptação da design sprint foi utilizada para guiar a construção de alguns artefatos e a subsequente solução de um dado problema. As etapas não seguiram o modelo de dias consecutivos de forma exata, mas sim etapas em que artefatos eram elaborados em conjunto com um determinado objetivo em mente. A divisão de cada passo foi a seguinte e esse mesmo fluxo também está representado na [Modelagem BPMN](Base/1.2.ProcessosMetodologiasAbordagens.md):
 
 ### Unpack
 
-Nessa primeira etapa, foi feita a elaboração de um [mapa mental]() para definição do escopo do projeto e identificação de possíveis obstáculos na utilização do sistema. Aqui foi definido um desafio a ser superado a longo prazo que é a "**dificuldade do usuário encontrar os produtos desejados**", após isso escolhemos uma pequena parte desse problema para buscar solucionar nesse ciclo da Design Sprint, que é a "**dificuldade de encontrar informações sobre um produto**". Logo após, foi feita a elaboração de [léxicos]() para ajudar a entender ainda melhor os conceitos inerentes ao ambiente do sistema e reconhecer os termos peculiares ao seu contexto social.
+Nessa primeira etapa, foi feita a elaboração de um [mapa mental](Base/MapaMental.md) para definição do escopo do projeto e identificação de possíveis obstáculos na utilização do sistema. Aqui foi definido um desafio a ser superado a longo prazo que é a "**dificuldade do usuário encontrar os produtos desejados**", após isso escolhemos uma pequena parte desse problema para buscar solucionar nesse ciclo da Design Sprint, que é a "**dificuldade de encontrar informações sobre um produto**". Logo após, foi feita a elaboração de [léxicos](Base/lexicos.md) para ajudar a entender ainda melhor os conceitos inerentes ao ambiente do sistema e reconhecer os termos peculiares ao seu contexto social.
 
-Posteriormente, foi feita a elaboração de um [5W2H]() para detalhar melhor o problema da "**dificuldade de encontrar informações sobre um produto**" e começar a pensar em sua possível solução. Para finalizar essa etapa, foi traçado um [plano de risco e tempo]() para auxiliar a parte de gerenciamento do projeto, de maneira que se possa ter um planejamento maior da execução das etapas posteriores.
+Posteriormente, foi feita a elaboração de um [5W2H](Base/5W2H.md) para detalhar melhor o problema da "**dificuldade de encontrar informações sobre um produto**" e começar a pensar em sua possível solução. Para finalizar essa etapa, foi traçado um [plano de risco e tempo](Base/plano-risco-tempo.md) para auxiliar a parte de gerenciamento do projeto, de maneira que se possa ter um planejamento maior da execução das etapas posteriores.
 
 ### Sketch
 
-Nessa segunda etapa, foi construído um [diagrama causa-efeito]() com base no [5W2H](), de forma a identificar as possíveis causas do problema a ser solucionado. Em seguida, foram elaborados diferentes [rich pictures](), com distintos pontos de vista, que compreendem os fluxos idealizados no [mapa mental](), para que assim se possa ter esboços da solução.
+Nessa segunda etapa, foi construído um [diagrama causa-efeito](Base/causa-efeito.md) com base no [5W2H](Base/5W2H.md), de forma a identificar as possíveis causas do problema a ser solucionado. Em seguida, foram elaborados diferentes [rich pictures](Base/RichPicture.md), com distintos pontos de vista, que compreendem os fluxos idealizados no [mapa mental](Base/MapaMental.md), para que assim se possa ter esboços da solução.
 
 ### Decision
 
-Aqui, o melhor [rich picture]() elaborado foi escolhido e transformado em um [storyboard]() que representa a solução do problema citado no [5W2H]() e que guiou o desenvolvimento do [protótipo]().
+Aqui, o melhor [rich picture](Base/RichPicture.md) elaborado foi escolhido e transformado em um [storyboard](Base/storyboard.md) que representa a solução do problema citado no [5W2H](Base/5W2H.md) e que guiou o desenvolvimento do [protótipo](Base/Prototipos.md).
 
 ### Prototype
 
-Nessa etapa, foi feita a elaboração do [protótipo]() com base no fluxo do [storyboard]().
+Nessa etapa, foi feita a elaboração do [protótipo](Base/Prototipos.md) com base no fluxo do [storyboard](Base/storyboard.md).
 
 ### Interview
 
-Por fim, o [protótipo]() foi válidado com um cliente por meio de um [teste de usabilidade]() em forma de entrevista.
+Por fim, o [protótipo](Base/Prototipos.md) foi válidado com um cliente por meio de um [teste de usabilidade](Base/validacao-prototipo.md) em forma de entrevista.
 
 ## Justificativa da escolha dos artefatos
 
-### [5W2H]()
+### [5W2H](Base/5W2H.md)
 
 O método 5W2H representa uma valiosa ferramenta de gestão de qualidade, que se mostra altamente eficaz na análise e solução de problemas de maneira eficiente. Ele estabelece um estrutura para a coleta de informações relevantes e a construção de um modelo que facilita a clarificação das etapas práticas a serem tomadas, visando garantir uma resolução satisfatória. Esse método se fundamenta em sete perguntas-chave: "o que", "por quê", "onde", "quando", "quem", "como" e "quanto". Ao abordar cada uma destas perguntas, é possível descrever o problema com uma precisão notável, além de identificar as ações necessárias para resolvê-lo. O 5W2H se revela como uma ferramenta de simplicidade e acessibilidade notáveis, aplicável em diversos tipos de projetos. Ele simplifica a gestão, fomenta uma comunicação transparente e, assim, aprimora substancialmente as chances de êxito, uma vez que todos os envolvidos compartilham uma compreensão unificada dos objetivos e do escopo do projeto.
 
-### [Mapa Mental]()
+### [Mapa Mental](Base/MapaMental.md)
 
 O uso de Mapas Mentais para o nosso projeto é justificado pela sua capacidade de visualizar informações complexas, ideias interconectadas e tarefas relacionadas de forma clara e organizada. Isso promove uma compreensão mais profunda e facilita o planejamento e a comunicação. 
 
-### [Diagrama Causa-Efeito]()
+### [Diagrama Causa-Efeito](Base/causa-efeito.md)
 
 O diagrama causa-efeito é uma ferramenta de gestão de qualidade que ajuda a identificar e analisar as causas subjacentes de um problema ou desafio. Ele organiza as informações de forma clara e visual, permitindo que a equipe identifique as principais áreas de impacto e as relações entre as variáveis. Isso é fundamental para a resolução eficaz de problemas e para melhorar processos. O diagrama causa-efeito é valioso para tomada de decisões informadas e implementação de soluções direcionadas, melhorando a eficiência e eficácia do projeto. Ele é uma ferramenta simples e acessível que pode ser usada em diferentes tipos de projetos.
 
-### [Rich Picture]()
+### [Rich Picture](Base/RichPicture.md)
 
 O uso de Rich Pictures para o nosso projeto é justificado pela sua capacidade de criar uma representação visual rica e detalhada de um contexto complexo, destacando aspectos relevantes, interações e stakeholders. O Rich Picture permite uma compreensão mais profunda do ambiente em que o projeto está inserido, identificando atores-chave e suas relações. Ele é uma ferramenta simples e acessível que pode ser usada em diferentes tipos de projetos.
 
-### [Léxicos]()
+### [Léxicos](Base/lexicos.md)
 
 Os artefatos "léxicos" foram escolhidos para o projeto porque são essenciais para a definição precisa e compartilhada da terminologia específica do projeto. Esse objeto evita malentendidos e ambiguidades na comunicação entre membros da equipe, parceiros e interessados. A criação de léxicos também ajuda a tornar a linguagem usada no projeto uniforme, tornando mais fácil para todos os envolvidos entender e usar os termos de maneira consistente. Isso é essencial para o sucesso geral do projeto e para a clareza e eficácia da comunicação.
 
-### [Planos de Risco e Tempo]()
+### [Planos de Risco e Tempo](Base/plano-risco-tempo.md)
 
 O uso de planos de Risco e Tempo no projeto é justificado pela necessidade de gerenciar de forma eficaz os elementos críticos de qualquer empreendimento. O plano de Risco ajuda a identificar, avaliar e mitigar potenciais problemas que podem afetar o projeto, reduzindo incertezas e impactos negativos. Enquanto isso, o plano de Tempo estabelece um cronograma claro, permitindo uma alocação eficiente de recursos e garantindo que o projeto seja concluído dentro do prazo estipulado. Ambos os planos são essenciais para minimizar contratempos e assegurar o sucesso geral do projeto.
 
@@ -73,7 +73,9 @@ Ao longo deste trabalho, empregamos metodologias ágeis como SCRUM e XP, juntame
 ## Bibliografia
 
 > GOOGLE VENTURES. The Design Sprint, 2023. Disponível em: <<http://www.gv.com/sprint/>>. Acesso em: 14/09/2023.
+>
 > THE SPRINT BOOK. The Design Sprint, 2023. Disponível em: <<https://www.thesprintbook.com/the-design-sprint>>. Acesso em: 15/09/2023.
+>
 > SERRANO M., Material da aula: "PROJETO E DESENHO DE SOFTWARE", disponível na plataforma Aprender3. Acesso em 15/09/2023.
 
 ## Histórico de Versões
@@ -82,3 +84,4 @@ Ao longo deste trabalho, empregamos metodologias ágeis como SCRUM e XP, juntame
 | ------ | ---------- | -------------------------------------------- | ------------------------------------------------ | ------------------------------------------------ |
 | `1.0`  | 14/09/2023 | Criação da página da design sprint e introdução.    |  [Douglas Alves](https://github.com/dougalvs) |  [Arthur de Melo](https://github.com/arthurmlv) |
 | `1.1`  | 15/09/2023 | Adição do detalhamento metodológico, artefatos e conclusão.    |  [Douglas Alves](https://github.com/dougalvs) |  [Sidney Fernando](https://github.com/nando3d3) |
+| `1.1`  | 15/09/2023 | Adição dos links dos outros artefatos    |  [Douglas Alves](https://github.com/dougalvs) |  [Arthur de Melo](https://github.com/arthurmlv) |
