--- a/docs/Base/1.2.ProcessosMetodologiasAbordagens.md
+++ b/docs/Base/1.2.ProcessosMetodologiasAbordagens.md
@@ -132,6 +132,7 @@ Os artefatos são elementos adicionados a um diagrama para enriquecê-lo com inf
         <td><img src='../assets/artefatos.png'></td>
     </tr>
 </table>
+
 <font>Fonte: [Sidney Fernando](https://github.com/nando3d3), 2023.</font>
 </center>
 
@@ -141,27 +142,30 @@ A figura 2 ilustra as escolhas metodológicas do projeto e como funciona o fluxo
 
 <center>
 Figura 2 - Diagrama BPMN de Escolhas Metodológicas
-<p align="center">
-    <a href="../assets/metodologias-bpmn.png"><img src="../assets/metodologias-bpmn.png" alt="BPMN Metodologias" width="3000"/></a></br>
-</p>
-<font>Fonte: [Douglas Alves](https://github.com/dougAlvs) e [Sidney Fernando](https://github.com/nando3d3)</font>
+
+<img src="../assets/metodologias-bpmn.png" alt="BPMN Metodologias" width="3000"/> </br>
+
+<font>Fonte: [Douglas Alves](https://github.com/dougAlvs) e [Sidney Fernando](https://github.com/nando3d3), 2023.</font>
 </center>
 
 <br>
 
-Já a figura 3 evidencia as etapas da design sprint e a relação entre os artefatos da primeira entrega. Para mais detalhes ler o [documento da design sprint]().
+Já a figura 3 evidencia as etapas da design sprint e a relação entre os artefatos da primeira entrega. Para mais detalhes ler o [documento da design sprint](Base/1.1.AbordagemNaoEspecifica.md).
 
 <center>
-Figura 2 - Diagrama BPMN de Escolhas Metodológicas
-<p align="center">
-    <a href="../assets/design-sprint-bpmn.png"><img src="../assets/design-sprint-bpmn.png" alt="BPMN Design Sprint" height="1000"/></a></br>
-</p>
-<font>Fonte: [Douglas Alves](https://github.com/dougAlvs) e [Sidney Fernando](https://github.com/nando3d3)</font>
+Figura 3 - Diagrama BPMN da Design Sprint
+
+<img src="../assets/design-sprint-bpmn.png" alt="BPMN Design Sprint" height="1000"/></br>
+
+
+<font>Fonte: [Douglas Alves](https://github.com/dougAlvs) e [Sidney Fernando](https://github.com/nando3d3), 2023</font>
+
 </center>
 
 ## Bibliografia
 
 > SGANDERLA, Kelly. <b>Um guia para iniciar estudos em BPMN (I)<b>: atividades e sequência. Atividades e sequência. 2012. Disponível em: https://blog.iprocess.com.br/2012/11/um-guia-para-iniciar-estudos-em-bpmn-i-atividades-e-sequencia/. Acesso em: 12 set. 2023.
+> 
 > LUCIDCHART. What is Business Process Modeling Notation. Disponível em: https://www.lucidchart.com/pages/bpmn. Acesso em: 13 set. 2023.
 
 ## Referências Bibliográficas
