--- a/docs/Base/1.3.ParticipacoesBase.md
+++ b/docs/Base/1.3.ParticipacoesBase.md
@@ -10,25 +10,25 @@ Esse documento apresenta as auto-avaliações que cada integrante do grupo fez a
 
 | Nome do Membro                                      | Contribuição                                                                                                                                                                                                                                    | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) |
 | --------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------ |
-| [Laura Pinos](https://github.com/laurapinos)        | [5W2H](1.1.2.5W2H.md)                                                                                                                                                                                                                           | Boa                                                                            |
-| [Hellen Fernanda](https://github.com/Hellen159)     | [5W2H](1.1.2.5W2H.md) <br> [Rich Picture](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.4.RichPicture)                                                                                                              |                                                                                |
-| [Débora Caires](https://github.com/deboracaires)    | [5W2H](1.1.2.5W2H.md) <br> [Protótipos]()                                                                                                                                                                       | Excelente                                                                      |
-| [Arthur de Melo](https://github.com/arthurmlv)      | [Diagrama Causa-Efeito](1.1.3.causa-efeito.md) <br> [Léxicos](lexicos.md) <br> [Teste de Usabilidade](testes.md)                 |     Excelente                                                                           |
-| [Douglas Alves](https://github.com/dougAlvs)        | [Diagrama Causa-Efeito](1.1.3.causa-efeito.md) <br> [Design Sprint]()      |      Excelente                                                                          |
-| [Matheus Henrique](https://github.com/mathonaut)    | [Plano de Risco e Tempo](1.1.6.plano-risco-tempo.md) <br> [Mapa Mental](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.3.MapaMental)                                                                                 | Excelente                                                                      |
-| [Sidney Fernando](https://github.com/nando3d3)      | [Plano de Risco e Tempo](1.1.6.plano-risco-tempo.md) <br> [Léxicos](lexicos.md)                                                                                                                                                                 | Excelente                                                                      |
-| [Maciel Junior](https://github.com/macieljuniormax) | [Protótipos](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.5.Prototipos) <br> [Escolhas Metodológicas](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.2.ProcessosMetodologiasAbordagens) | Excelente                                                                      |
-| [Geovanna Maciel](https://github.com/manuziny)      | [Rich Picture](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.4.RichPicture) <br> [Mapa Mental](https://unbarqdsw2023-2.github.io/2023.2_G7_ProjetoMagazineLuiza/#/Base/1.3.MapaMental) <br> [Storyboard]()          | Excelente                                                                      |
+| [Laura Pinos](https://github.com/laurapinos)        | [5W2H](Base/5W2H.md)                                                                                                                                                                                                                           | Boa                                                                            |
+| [Hellen Fernanda](https://github.com/Hellen159)     | [5W2H](Base/5W2H.md) <br> [Rich Picture](Base/RichPicture.md)                                                                                                              |                                                                                |
+| [Débora Caires](https://github.com/deboracaires)    | [5W2H](Base/5W2H.md) <br> [Protótipos](Base/Prototipos.md)                                                                                                                                                                       | Excelente                                                                      |
+| [Arthur de Melo](https://github.com/arthurmlv)      | [Diagrama Causa-Efeito](Base/causa-efeito.md) <br> [Léxicos](Base/lexicos.md) <br> [Teste de Usabilidade](Base/validacao-prototipo.md)                 |     Excelente                                                                           |
+| [Douglas Alves](https://github.com/dougAlvs)        | [Diagrama Causa-Efeito](Base/causa-efeito.md) <br> [Design Sprint](Base/1.1.AbordagemNaoEspecifica.md)      |      Excelente                                                                          |
+| [Matheus Henrique](https://github.com/mathonaut)    | [Plano de Risco e Tempo](Base/plano-risco-tempo.md) <br> [Mapa Mental](Base/MapaMental.md)                                                                                 | Excelente                                                                      |
+| [Sidney Fernando](https://github.com/nando3d3)      | [Plano de Risco e Tempo](Base/plano-risco-tempo.md) <br> [Léxicos](Base/lexicos.md)                                                                                                                                                                 | Excelente                                                                      |
+| [Maciel Junior](https://github.com/macieljuniormax) | [Protótipos](Base/Prototipos.md) <br> [Escolhas Metodológicas](Base/1.2.ProcessosMetodologiasAbordagens.md) | Excelente                                                                      |
+| [Geovanna Maciel](https://github.com/manuziny)      | [Rich Picture](Base/RichPicture.md) <br> [Mapa Mental](Base/MapaMental.md) <br> [Storyboard](Base/storyboard.md)          | Excelente                                                                      |
 
 ### Processos, Metodologias e Abordagens
 
 | Nome do Membro                                 | Contribuição                                             | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) |
 | ---------------------------------------------- | -------------------------------------------------------- | ------------------------------------------------------------------------------ |
-| [Laura Pinos](https://github.com/laurapinos)   | [Modelagem BPMN]() <br> [Escolhas Metodológicas]()       | Regular                                                                        |
-| [Arthur de Melo](https://github.com/arthurmlv) | [Modelagem BPMN](1.2.ProcessosMetodologiasAbordagens.md) | Regular                                                                        |
-| [Douglas Alves](https://github.com/dougAlvs)   | [Modelagem BPMN]()                                       |    Excelente                                                                           | 
-| [Sidney Fernando](https://github.com/nando3d3) | [Modelagem BPMN]()                                       | Boa                                                                            |
-| [Débora Caires](https://github.com/deboracaires)    | [Escolhas Metodológicas]()  | Excelente                                                                      |
+| [Laura Pinos](https://github.com/laurapinos)   | [Modelagem BPMN](Base/1.2.ProcessosMetodologiasAbordagens.md) <br> [Escolhas Metodológicas]()       | Regular                                                                        |
+| [Arthur de Melo](https://github.com/arthurmlv) | [Modelagem BPMN](Base/1.2.ProcessosMetodologiasAbordagens.md) | Regular                                                                        |
+| [Douglas Alves](https://github.com/dougAlvs)   | [Modelagem BPMN](Base/1.2.ProcessosMetodologiasAbordagens.md)                                       |    Excelente                                                                           | 
+| [Sidney Fernando](https://github.com/nando3d3) | [Modelagem BPMN](Base/1.2.ProcessosMetodologiasAbordagens.md)                                       | Boa                                                                            |
+| [Débora Caires](https://github.com/deboracaires)    | [Escolhas Metodológicas](Base/1.2.ProcessosMetodologiasAbordagens.md)  | Excelente                                                                      |
 
 
 ## Histórico de Versões
