--- a/docs/Base/5W2H.md
+++ b/docs/Base/5W2H.md
@@ -6,7 +6,7 @@ O método 5W2H é uma abordagem essencial no campo da gestão, projetada para as
 
 ## Objetivo
 
-O objetivo principal deste projeto é analisar e resolver o problema existente no aplicativo da Magalu relacionado à dificuldade de encontrar informações sobre os produtos. Esse problema foi identificado com base no [mapa mental](./MapaMental.md). Isso envolve aprimorar a experiência do usuário, tornando mais fácil e eficiente a busca e o acesso às informações necessárias sobre os produtos oferecidos pela empresa. A análise e resolução desse problema são essenciais para aumentar a satisfação do cliente, otimizar o processo de compra e, consequentemente, impulsionar o sucesso do aplicativo e do negócio como um todo.
+O objetivo principal deste projeto é analisar e resolver o problema existente no aplicativo da Magalu relacionado à dificuldade de encontrar informações sobre os produtos. Esse problema foi identificado com base no [mapa mental](Base/MapaMental.md). Isso envolve aprimorar a experiência do usuário, tornando mais fácil e eficiente a busca e o acesso às informações necessárias sobre os produtos oferecidos pela empresa. A análise e resolução desse problema são essenciais para aumentar a satisfação do cliente, otimizar o processo de compra e, consequentemente, impulsionar o sucesso do aplicativo e do negócio como um todo.
 
 ## Artefato
 
