docs: adiciona grafico de commits

--- a/docs/Base/1.3.ParticipacoesBase.md
+++ b/docs/Base/1.3.ParticipacoesBase.md
@@ -30,6 +30,19 @@ Esse documento apresenta as auto-avaliações que cada integrante do grupo fez a
 | [Sidney Fernando](https://github.com/nando3d3) | [Modelagem BPMN](Base/1.2.ProcessosMetodologiasAbordagens.md)                                       | Boa                                                                            |
 | [Débora Caires](https://github.com/deboracaires)    | [Escolhas Metodológicas](Base/1.2.ProcessosMetodologiasAbordagens.md)  | Excelente                                                                      |
 
+## Quadro de commits
+
+As figuras abaixo mostram os commits dos participantes do grupo na primeira entrega.
+
+<font size="3"><p style="text-align: center"><b>Figura 1</b> - Quadro de commits 1</p></font>
+<img src="assets/../assets/commits_1.png" alt="Storyboard" width="1000"/></br>
+<font size="3"><p style="text-align: center">Fonte: [Douglas Alves](https://github.com/dougAlvs), 2023</p></font>
+
+<br>
+
+<font size="3"><p style="text-align: center"><b>Figura 2</b> - Quadro de commits 2</p></font>
+<img src="assets/../assets/commits_2.png" alt="Storyboard" width="1000"/></br>
+<font size="3"><p style="text-align: center">Fonte: [Douglas Alves](https://github.com/dougAlvs), 2023</p></font>
 
 ## Histórico de Versões
 
@@ -38,3 +51,4 @@ Esse documento apresenta as auto-avaliações que cada integrante do grupo fez a
 | `1.0`  | 15/09/2023 | Criação da página           | [Sidney Fernando](https://github.com/nando3d3)   | [Douglas Alves](https://github.com/dougalvs) |
 | `1.1`  | 15/09/2023 | Adição da avaliação pessoal | [Matheus Henrique](https://github.com/mathonaut) | [Douglas Alves](https://github.com/dougalvs) |
 | `1.1.1`  | 15/09/2023 | Adição da avaliação pessoal | [Douglas Alves](https://github.com/dougalvs) | [Arthur de Melo](https://github.com/arthurmlv) |
+| `1.2`  | 15/09/2023 | Adição do quadro de commits | [Douglas Alves](https://github.com/dougalvs) | [Arthur de Melo](https://github.com/arthurmlv) |
